--- a/qml.qrc
+++ b/qml.qrc
@@ -5,5 +5,6 @@
         <file>Calendar.qml</file>
         <file>Segment.qml</file>
         <file>JournalEntry.qml</file>
+        <file>edit.svg</file>
     </qresource>
 </RCC>
