Basic summary page working

--- a/qml.qrc
+++ b/qml.qrc
@@ -3,8 +3,11 @@
         <file>main.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>Calendar.qml</file>
+        <file>CalendarPage.qml</file>
         <file>Segment.qml</file>
         <file>JournalEntry.qml</file>
         <file>edit.svg</file>
+        <file>calendar.svg</file>
+        <file>bg.png</file>
     </qresource>
 </RCC>
