--- a/qml.qrc
+++ b/qml.qrc
@@ -8,6 +8,7 @@
         <file>JournalEntry.qml</file>
         <file>edit.svg</file>
         <file>calendar.svg</file>
+        <file>heart.svg</file>
         <file>bg.png</file>
     </qresource>
 </RCC>
