Add ovulation indicator

--- a/qml.qrc
+++ b/qml.qrc
@@ -9,6 +9,7 @@
         <file>edit.svg</file>
         <file>calendar.svg</file>
         <file>heart.svg</file>
+        <file>flower.svg</file>
         <file>bg.png</file>
     </qresource>
 </RCC>
