--- a/qml.qrc
+++ b/qml.qrc
@@ -4,17 +4,19 @@
         <file>qtquickcontrols2.conf</file>
         <file>Calendar.qml</file>
         <file>CalendarPage.qml</file>
-        <file>CreditsPage.qml</file>
         <file>ColouredSvg.qml</file>
+        <file>CreditsPage.qml</file>
+        <file>EditJournalEntry.qml</file>
         <file>Segment.qml</file>
         <file>SettingsPage.qml</file>
-        <file>EditJournalEntry.qml</file>
+        <file>StatsPage.qml</file>
         <file>arrowback.svg</file>
-        <file>settings.svg</file>
-        <file>edit.svg</file>
         <file>calendar.svg</file>
-        <file>heart.svg</file>
+        <file>chart.svg</file>
+        <file>edit.svg</file>
         <file>flower.svg</file>
+        <file>heart.svg</file>
+        <file>settings.svg</file>
         <file>bg.png</file>
     </qresource>
 </RCC>
