Icon for window, Windows, macOS, and Android
Closes #18
Closes #16
Closes #15

--- a/qml.qrc
+++ b/qml.qrc
@@ -16,6 +16,7 @@
         <file>edit.svg</file>
         <file>flower.svg</file>
         <file>heart.svg</file>
+        <file>icon.svg</file>
         <file>settings.svg</file>
         <file>bg.png</file>
     </qresource>
